--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 
 <body class="container">
 		<h1>Иван Малый</h1>
-		<h2>Начинающий QA</h2>
+		<h2>QA с большими амбициями</h2>
 
 		<div class="item">
 			<img class="photo" src="me.jpg" width="320" height="427" alt="фото">
 		</div>
 
-			<p>Cторонник гедонизма</p>
+			<p>Сторонник гедонизма, любитель пуэра и просто хороший человек</p>
 
 			<h2>Обо мне</h2>
 
 			<div class="contacts">
 
-				<a href="http://t.me/amadorka">telegram</a> 
+				<a href="http://t.me/amadorka">telegram</a>
 				<br>
 				<a href="mailto:amadorgrote@mail.com">email</a>
 				<br>
