--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 				<a href="http://t.me/amadorka">telegram</a>
 				<br>
-				<a href="mailto:amadorgrote@mail.com">email</a>
+				<a href="mailto:malyy.ivan.96@gmail.com">email</a>
 				<br>
 				<a href="https://www.instagram.com/amadorich">instagram</a>
 				<br>
