--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<br>
 				<a href="https://github.com/MalyyIV-QA">github.com</a>
 			</div>
-				<button type="button">Кредо</button>
+				<button type="button">Философия жизни</button>
 				<script type="text/javascript" src="js.js"></script>
 
 </body>
