--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body class="container">
 		<h1>Иван Малый</h1>
-		<h2>QA с большими амбициями</h2>
+		<h2>Добродушный QA</h2>
 
 		<div class="item">
 			<img class="photo" src="me.jpg" width="320" height="427" alt="фото">
